Remove extraneous span

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="container">
             <img class="hero" src="img/golem.png" alt="Golem">
             <div class="info-section">
-                <div class="name"><span>cyanic</span></div>
+                <div class="name">cyanic</div>
                 <div class="separator"></div>
                 <div class="icons">
                     <a href="https://groupees.com/user_walls/15413" title="Groupees Profile"><img class="link-icon" src="img/groupees.png" alt="Groupees"></a>
